--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
 <body>
     <div class="container-fluid" id="speech">
         <div class="col-md">
-            <h1 class="col">Hello world</h1>
+            <div class="color" style="text-align: center">
+                Try this color ['aqua', 'azure',  'black', 'beige', 'bisque',
+                'blue', 'brown', 'chocolate', 'coral', 'yellow',
+                 'white', 'violet', 'lime', 'magenta', 'ghostwhite',
+                'pink', 'sienna', 'snow', 'tomato', 'tan', 'violet', 'silver',
+                 'khaki', 'navy', 'peru', 'gray'];
+            </div>
+            <h1 class="col" style="margin-top: 30px">Hello world</h1>
             <p>Tap/click the mic icon then say a color to change the backgroud of the app.</p>
             <span class="toggle-box">
                 <i class="fas fa-microphone" style="font-size: 80px" id="voiceout" onclick="voice()"></i>
